--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
 }
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -77,11 +77,6 @@ body{
   color: #F5F5F5;
 }
 
-.fedev {
-  font-size: 12.5px;
-  color: #F3BF99;
-}
-
 .btn-a > a, .btn-a-linked > a {
   display: flex;
   gap: 0.5rem;
@@ -133,6 +128,11 @@ body{
 
 .card p {
   color: #DCDCDC;
+}
+
+.details > p {
+  font-size: 12.5px;
+  color: #F3BF99;
 }
 
 .profile {
